预约挂号不能选无卡bug和客服头像bug

--- a/pages/customer/index/index.wxml
+++ b/pages/customer/index/index.wxml
@@ -56,7 +56,7 @@
           <block wx:else>
             <view class="other-side clearfix">
               <view class="tx">
-                <image src="/style/image/t-face.svg"></image>
+                <image src="/style/image/zizhu/guahao.png"></image>
               </view>
               <view class="txt">
                 <view class="ul clearfix">
