--- a/pages/record/appointment-record/appointment-record.wxml
+++ b/pages/record/appointment-record/appointment-record.wxml
@@ -3,7 +3,7 @@
 <navigator url="/pages/center/member-list/member-list?isSelect=true" class="banner-reg-recond">
   <image class="navigator-background" src='/style/image/record/select-member-bg.png'></image>
   <view class="navigator-info" wx:if="{{!member || !member.id}}">
-    <text class='h4'>选择就诊人</text>
+    <text class='h4'>选择持卡人</text>
   </view>
   <view class="navigator-info" wx:else>
     <text class='h4'>{{member.name}}</text>{{member.sex == 'MALE' ? '男': '女'}}
