--- a/pages-index/clinic/clinic-info/clinic-info.wxml
+++ b/pages-index/clinic/clinic-info/clinic-info.wxml
@@ -8,7 +8,7 @@
     <view class='color-3'>{{member.sex == "MALE"?"男":"女"}} {{medicalCard.medicalCardNo}}</view>
   </view>
   <view class='am-flex-title move-upward' wx:else>
-    <view class='h4-lg color-3'>选择就诊人</view>
+    <view class='h4-lg color-3'>选择就诊卡</view>
   </view>
   <view class='am-flex-after'>
     <i class="i-item-angle" style="margin-top:0;"></i>
