--- a/pages/center/index/index.wxml
+++ b/pages/center/index/index.wxml
@@ -14,16 +14,16 @@
   <view class='am-panel-block'>
     <ul class="per-menu-list wx-row">
       <li bindtap='methodNeedLogin' data-method="showPage" data-url='/pages/center/member-list/member-list'>
-        <image src="/style/svg/center/center-1.png"></image>
+        <image src="/style/svg/center/center-1.svg"></image>
         <text class='txt'>就诊人管理</text>
         <i class="line-angle" wx:if="{{isLogin && accounts.length>0}}"></i>
       </li>
       <li bindtap='methodNeedLogin' data-method="showPage" data-url='/pages/record/appointment-record/appointment-record'>
-        <image src="/style/svg/center/center-2.png"></image>
+        <image src="/style/svg/center/center-2.svg"></image>
         <text class='txt'>预约记录</text>
       </li>
       <li bindtap='methodNeedLogin' data-method="showPage" data-url='/pages/center/message/message?type=USER_NOTIFICATION?hasUnread={{unreadNum>0}}'>
-        <image src="/style/svg/center/center-3.png">
+        <image src="/style/svg/center/center-3.svg">
         </image>
         <text class='txt'>消息中心</text>
         <view class="badge" wx:if="{{unreadNum>0}}"></view>
