--- a/pages/index/heathList/heathList.wxml
+++ b/pages/index/heathList/heathList.wxml
@@ -2,7 +2,7 @@
 <view class="containerView">
    <navigator class='am-flex-item item-img-txt link-active' url='../medical-tools/bmi/bmi-calculator/bmi-calculator'>
         <view class='am-flex-title'>
-          <image class='i-item' src="../../../style/image/knowledge-repository/bmi.png"></image>
+          <image class='i-item' src="../../../style/image/knowledge-repository/bmi.svg"></image>
           BMI计算器
         </view>
         <view class='am-flex-after'>
@@ -11,7 +11,7 @@
       </navigator>
       <navigator class='am-flex-item item-img-txt link-active' url='../medical-tools/hepatitis-b/hepatitis-b-self-test/hepatitis-b-self-test'>
         <view class='am-flex-title'>
-          <image class='i-item' src="../../../style/image/knowledge-repository/ygzc.png"></image>
+          <image class='i-item' src="../../../style/image/knowledge-repository/ygzc.svg"></image>
           乙肝自测
         </view>
         <view class='am-flex-after'>
@@ -20,7 +20,7 @@
       </navigator>
           <navigator class='am-flex-item item-img-txt link-active' url='../medical-tools/check-test/check-test-list/check-test-list'>
         <view class='am-flex-title'>
-          <image class='i-item' src="../../../style/image/knowledge-repository/hydjd.png"></image>
+          <image class='i-item' src="../../../style/image/knowledge-repository/hydjd.svg"></image>
           检验单解读
         </view>
         <view class='am-flex-after'>
@@ -30,7 +30,7 @@
 
 <navigator class='am-flex-item item-img-txt link-active' url='../medical-tools/baby-blood/baby-blood'>
         <view class='am-flex-title'>
-          <image class='i-item' src="../../../style/image/knowledge-repository/xxzc.png"></image>
+          <image class='i-item' src="../../../style/image/knowledge-repository/xxzc.svg"></image>
           宝宝血型
         </view>
         <view class='am-flex-after'>
