--- a/pages/record/bedappoint-record/bedappoint-record.wxss
+++ b/pages/record/bedappoint-record/bedappoint-record.wxss
@@ -1,1 +1,6 @@
 /* pages/record/bedappoint-record/bedappoint-record.wxss */
+.am-panel-block {
+  background: #fff;
+  margin-top: 20rpx;
+  width: 100%;
+}
