--- a/components/medical-card/medical-card.wxml
+++ b/components/medical-card/medical-card.wxml
@@ -1,9 +1,11 @@
 <!--components/medical-card/medical-card.wxml-->
 <!--components/member-card/member-card.wxml-->
 <view class='bd member-body'>
-  <view class='name'>{{item.cardTypeVO.name}}</view>
+  <view class="name {{'ct-'+item.cardTypeVO.id}}">
+    <view class="content">{{item.cardTypeVO.name}}</view>
+  </view>
   <view class='h4'>{{item.name}}
-    
+
   </view>
   <view class='medical-card-item'>
     <image class="medical-card-icon" src="/style/image/icons/card-number.svg"></image>{{item.medicalCardNo}}
