--- a/pages-index/clinic/clinic-info/clinic-info.wxml
+++ b/pages-index/clinic/clinic-info/clinic-info.wxml
@@ -2,17 +2,18 @@
 <import src="../../../utils/toast/index.wxml" />
 <view class='b-t'></view>
 <view class="item-multi-txt am-flex-item bg-white link-active select-card" bindtap='showCardList'>
-  <image class="common-bg select-crard-bg" src='/style/image/record/common-bg.png'></image>
+  <!-- <image class="common-bg select-crard-bg" src='/style/image/record/common-bg.png'></image> -->
+    <image class="navigator-background" src='/style/image/record/select-member-bg.png'></image>
   <view class='am-flex-title move-upward' wx:if="{{medicalCard && medicalCard.name}}">
-    <view class='h4-lg'>{{medicalCard.name}}</view>
-    <view class='color-3'>{{member.sex == "MALE"?"男":"女"}} {{medicalCard.medicalCardNo}}</view>
+    <view class='h4-lg font-weight color-3'>{{medicalCard.name}}</view>
+    <view class='color-3 am-ft-13'>{{member.sex == "MALE"?"男":"女"}} {{medicalCard.medicalCardNo}}</view>
   </view>
   <view class='am-flex-title move-upward' wx:else>
-    <view class='h4-lg color-3'>选择就诊卡</view>
+    <view class='h4-lg color-3'>请选择就诊卡</view>
   </view>
-  <view class='am-flex-after'>
+  <!-- <view class='am-flex-after'>
     <i class="i-item-angle" style="margin-top:0;"></i>
-  </view>
+  </view> -->
 </view>
 
 <view class='am-panel fee-panel'>
@@ -62,7 +63,7 @@
       </view>
     </view>
     <!-- form-fee-item -->
-    <view class='form-fee-item font-weight'>
+    <view class='form-fee-item'>
       <view class='form-fee-label'>就诊日期</view>
       <view class='form-fee-control'>
         <text>{{schedule.scheduleDateStr}} </text>
