--- a/pages-index/clinic/dept-schedule/dept-schedule.wxss
+++ b/pages-index/clinic/dept-schedule/dept-schedule.wxss
@@ -13,6 +13,12 @@
   width: 140rpx;
   height: 140rpx;
   margin: 15rpx 14rpx 0 0;
+  border-radius: 50%;
+  line-height: 140rpx;
+  background-color: #FCF6EA;
+  color:#AE700D;
+  text-align: center;
+  font-size: 40rpx;
 }
 
 .reg .pic image {
