院内导航楼层详情标题更改 床位预约列表加上患者姓名  预约记录列表中价格颜色更改

--- a/pages/record/bedappoint-record/bedappoint-record.wxml
+++ b/pages/record/bedappoint-record/bedappoint-record.wxml
@@ -25,7 +25,7 @@
     </view>
     <view class='rgrecond-item am-flex-item'>
       <view class='am-flex-title'>
-        <view class='h5'>{{item.patient.name}}</view>
+        <view class='h5'>{{item.name}}</view>
         <view class='p'>{{item.regDate}}
         </view>
       </view>
