--- a/pages/record/appointment-record/appointment-record.wxml
+++ b/pages/record/appointment-record/appointment-record.wxml
@@ -22,7 +22,7 @@
         </text>
       </view>
       <view class='am-flex-after'>
-        <text class='h5 am-txt-danger'>¥{{item.regFee}}元</text>
+        <text class='h5 color-2'>¥{{item.regFee}}元</text>
       </view>
     </view>
     <view class='rgrecond-item am-flex-item'>
