--- a/pages-index/clinic/expert-schedule/expert-schedule.wxml
+++ b/pages-index/clinic/expert-schedule/expert-schedule.wxml
@@ -41,14 +41,14 @@
         <text>执业点</text>
       </view>
       <view class='content-content'>
-        <text wx:if="{{doctor.expertTimePrice}}">{{dept.name}}/{{doctor.expertTimePrice}}</text>
+        <text wx:if="{{doctor.location}}">{{doctor.location}}</text>
       </view>
     </block>
     <block>
       <view class='content-title has-left-badge'>
         <text>擅长</text>
       </view>
-      <view class='content-content color-1'>
+      <view class='content-content'>
         <text>{{doctor.speciality}}</text>
       </view>
     </block>
