--- a/pages/center/member-info/member-info.wxss
+++ b/pages/center/member-info/member-info.wxss
@@ -95,6 +95,9 @@ page {
   margin: 45rpx auto;
   font-size: 24rpx;
 }
+.icon-content .left-icon .content.narrow {
+  width: 66rpx;
+}
 
 .icon-content .right-content {
   line-height: 45rpx;
