--- a/pages/record/appointment-record-detail/appointment-record-detail.wxss
+++ b/pages/record/appointment-record-detail/appointment-record-detail.wxss
@@ -8,3 +8,15 @@
   bottom: 0;
   background: rgba(0, 0, 0, 0.6);
 }
+.trade-name-id{
+  padding-top:20rpx;
+  font-size:32rpx;
+}
+.trade-name{
+  width: 160rpx;
+  float: left;
+}
+.trade-id{
+  padding-left: 160rpx;
+  word-wrap:break-word;
+}
